--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.14.0",
     "recoil": "^0.7.7",
     "styled-components": "^5.3.3",
