--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,22 +1,18 @@
 spring:
   profiles:
     include: oauth
-  h2:
-    console:
-      enabled: true
-      path: /h2
-      settings:
-        web-allow-others: true
+
 
   datasource:
-    url: jdbc:h2:mem:test
+    driverClassName: org.mariadb.jdbc.Driver
+    url: jdbc:mariadb://svc.sel4.cloudtype.app:31945/server
+    username: root
+    password: 1234
   jpa:
+    database-platform: org.hibernate.dialect.MariaDBDialect
     hibernate:
-      ddl-auto: create
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
+      ddl-auto: update
+    defer-datasource-initialization: true
   servlet:
     multipart:
       enabled: true
